Docker-compose fonctionnel + connexion à la base réussie
